--- a/less/about.less
+++ b/less/about.less
@@ -15,7 +15,7 @@
         h1 {
             color: white;
             font-size: 2.5rem;
-            margin: 3%;
+            margin: 2% 5%;
             font-family: @heading-font;
 
             @media @desktop {
